--- a/package.json
+++ b/package.json
@@ -1,27 +1,20 @@
 {
-  "name": "graphql-example",
+  "name": "blog-api-graphql",
   "version": "1.0.0",
-  "description": "repositório com código exemplo de API nodejs com graphql",
   "main": "index.js",
+  "repository": "git@github.com:gprando/blog-api-graphql.git",
+  "author": "Gabriel Prando <gprando55@gmail.com>",
+  "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "dev:server": "ts-node-dev --inspect --ignore-watch node_modules src/index.ts"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/gprando/graphql-example.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/gprando/graphql-example/issues"
-  },
-  "homepage": "https://github.com/gprando/graphql-example#readme",
-  "dependencies": {},
   "devDependencies": {
-    "gulp": "^4.0.2",
-    "gulp-clean": "^0.4.0",
-    "gulp-typescript": "^5.0.1",
-    "typescript": "^3.6.4"
+    "@types/express": "^4.17.8",
+    "ts-node-dev": "^1.0.0-pre.62",
+    "typescript": "^4.0.2"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
