--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
+    "@types/express-graphql": "^0.9.0",
+    "@types/graphql": "^14.5.0",
     "ts-node-dev": "^1.0.0-pre.62",
     "typescript": "^4.0.2"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-graphql": "^0.11.0",
+    "graphql": "^15.3.0",
+    "graphql-tools": "^6.2.1"
   }
 }
