--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev:server": "ts-node-dev --inspect --ignore-watch node_modules src/index.ts"
+    "dev:server": "NODE_ENV=development ts-node-dev --inspect --ignore-watch node_modules src/index.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
