--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "express": "^4.17.1",
     "express-graphql": "^0.11.0",
     "graphql": "^15.3.0",
-    "graphql-tools": "^6.2.1"
+    "graphql-tools": "^6.2.1",
+    "pg": "^8.3.3",
+    "typeorm": "^0.2.26"
   }
 }
