--- a/ormconfig.json
+++ b/ormconfig.json
@@ -3,6 +3,14 @@
   "host": "localhost",
   "port": 5432,
   "username": "postgres",
-  "password": "pecoccam",
-  "database": "blog_graphql"
+  "password": "docker",
+  "database": "blog_graphql",
+  "migrations": [
+    "./src/database/migrations/*.ts"
+
+  ],
+  "cli": {
+    "migrationsDir": "./src/database/migrations"
+  }
+
 }
